k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-miniapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devops-miniapp
  template:
    metadata:
      labels:
        app: devops-miniapp
    spec:
      containers:
        - name: devops-miniapp
          image: your-badshanoordeen/devops-miniapp:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
