k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-miniapp
spec:
  type: NodePort
  selector:
    app: devops-miniapp
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30080
